# rust-playground

./: .gitignore  Cargo.toml
.github/: dependabot.yaml
.github/workflows/: advent-of-code.yml  aoc-bins.yml  aoc-input-fetch.yml  aoc-private-leaderboard-fetch.yml  build-advent-of-code.yml  channels-sample.yml  data-types.yml  grrs.yml  guessing-game.yml  hello-world.yml  interop.yml  nonogram-unique.yml  numbermind.yml  reading-files.yml  wasm-game-of-life.yml
advent-of-code/: .gitignore  Cargo.toml
advent-of-code/src/: helper.rs  main.rs  year2015.rs  year2023.rs  year2024.rs
advent-of-code/src/year2015/: day201501.rs
advent-of-code/src/year2023/: day202301.rs  day202302.rs  day202303.rs  day202304.rs
advent-of-code/src/year2024/: day202401.rs  day202402.rs  day202403.rs  day202404.rs
aoc-bins/: Cargo.toml
aoc-bins/aoc-common/: Cargo.toml
aoc-bins/aoc-input-fetch/: Cargo.toml
aoc-bins/aoc-private-leaderboard-fetch/: Cargo.toml
aoc-common/: Cargo.toml
aoc-common/src/: lib.rs
aoc-input-fetch/: Cargo.toml
aoc-input-fetch/src/: main.rs
aoc-private-leaderboard-fetch/: Cargo.toml
aoc-private-leaderboard-fetch/src/: main.rs
channels-sample/: Cargo.toml
channels-sample/src/: main.rs
data-types/src/: lib.rs  lib2.rs
grrs/: Cargo.toml
guessing-game/src/: main.rs
hello-world/src/: main.rs
interop/: Cargo.toml  Makefile  adder.c  build.rs  demo-static  main.c
interop/adder/: Makefile  adder.c
nonogram-unique/: Cargo.toml
numbermind/: Cargo.toml
reading-files/: Cargo.toml
wasm-game-of-life/: Cargo.toml  README.md
(+24 files in other folders)
