[package]
name = "aoc-private-leaderboard-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
cookie = "0.18.1"
home = "0.5.9"
reqwest = { version = "0.12.9", features = ["cookies"]}
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
